--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -9,167 +9,35 @@
 
 .heroContent{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.wrapper{
-  width: 420px;
-  
+.data-analysis{
+  color: white;
+  padding: 2em;
+  line-height: 1.7em;
+  font-size: 1.2em;
 }
 
-.wrapper .input-box {
-  width: 350px;
-  height: 50px;
-  margin: 5px 1px;
-  padding: 1em 0.5em;
-  margin-left: 1.5em;
-}
-
-.the-form{
+.dashbordLinks{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  border: 1.5px solid lightblue;
-  border-radius: 10px;
-  
+  gap: 3em;
+  text-transform: capitalize;
 }
 
-.the-form h1 {
-  font-size: 26px;
-  text-align: center;
-
-}
-
-.input-box{
-  margin-bottom: 2em;
-}
-
-.input-box input::type{
-  color: white;
-}
-
-.input-box input{
-  width: 80%;
-  height: 50%;
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 2);
-  border-radius: 40px;
-  transition: color 0.3s ease-in-out;
-  margin-bottom: 1em;
-  font-size: 20px;
-  color: white;
-  padding: 3px 3px 5px 5px;
-  padding-left: 1.5em;
-
-}
-
-
-
-.input-box input:hover{
-border-color: brown;
-box-shadow: brown;
-}
-
-.input-box input::placeholder{
-  color: white;
-  font-size: 1.2em;
-  align-items: center;
-  font-family: "Playwrite AU QLD", cursive;
-}
-
-.input-box i {
-  position: absolute;
-  right: 20px;
-  transform: translateY(-50%);
-  font-size: 20px;
-  align-items: center;
-}
-
-.remember-forgot{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2em;
-  align-items: center;
-  gap: 4em;
-}
-
-.remember-forgot label input {
-  font-size: 1em;
-  accent-color: white;
-  color: white;
-}
-
-.remember-forgot a {
-font-family: "Playwrite AU QLD", cursive;
+.dashbordLinks a{
 text-decoration: none;
 color: white;
-transition: color 0.3s ease-in-out;
-font-size: 1em;
-}
-
-.remember-forgot a:hover{
-  color: brown;
-  text-decoration: underline;
-}
-
-.the-form{
-  margin: 2em;
-}
-
-.the-form h1{
-  color: white;
-}
-
-
-.wrapper .btn-submit{
-width: 70%;
-height: 45px;
-background: brown;
-border: none;
-outline: none;
-border-radius: 40px;
-margin-top: 2em;
-color: white;
-transition: color 0.3s ease-in-out;
-  
-
-}
-
-.btn-submit:hover{
-  background: whitesmoke;
-  transition: color 0.3s ease-in-out;
-  color: black;
-  cursor: pointer;
-}
-
-
-.signIn-info{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
-
-.register-link{
-  display: flex;
-  gap: 3em;
-
-}
-
-.register-link p{
-color: crimson;
 font-size: 1.5em;
-font-family: italic;
 }
 
-.register-link a{
-  text-decoration: none;
-  color: white;
-  transition: color 0.3s ease-in-out;
-
+.dashbordData li{
+  list-style: none;
 }
 
-.register-link a:hover{
-  color: midnightblue;
+.dashbordLinks a:hover{
+  color: brown;
   transition: color 0.3s ease-in-out;
 }
+
